# adk-python_forked

./: CLAUDE.md
agents/docs/: google_adk_sdk.md  ideas.md
agents/repo_cloner/: .env.template  README.md  __init__.py  __main__.py  agent.py  pyproject.toml
agents/scraping_bee/: README.md  __init__.py  __main__.py  agent.py  pyproject.toml
mcp_tools/: aider.rs
